--- a/Major Project/Debug/makefile
+++ b/Major Project/Debug/makefile
@@ -65,7 +65,7 @@ dependents:
 
 # Tool invocations
 Major\ Project.elf Major\ Project.map: $(OBJS) $(USER_OBJS) C:/Users/quang/OneDrive\ -\ The\ University\ of\ Sydney\ (Students)/Year\ 2/Semester\ 1/MTRX2700/MTRX2700-2024/STMF3disco-BSP/Debug/libSTMF3disco-BSP.a C:/Users/quang/OneDrive\ -\ The\ University\ of\ Sydney\ (Students)/Year\ 2/Semester\ 1/MTRX2700/MTRX2700-2024/stm32f303-definitions/Debug/stm32f303-definitions C:\Users\quang\STM32CubeIDE\workspace_1.15.1\Major\ Project\STM32F303VCTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "Major Project.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\quang\STM32CubeIDE\workspace_1.15.1\Major Project\STM32F303VCTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Major Project.map" -Wl,--gc-sections -static -L"C:\Users\quang\OneDrive - The University of Sydney (Students)\Year 2\Semester 1\MTRX2700\MTRX2700-2024\STMF3disco-BSP\Debug" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -o "Major Project.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\quang\STM32CubeIDE\workspace_1.15.1\Major Project\STM32F303VCTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Major Project.map" -Wl,--gc-sections -static -L"C:\Users\quang\OneDrive - The University of Sydney (Students)\Year 2\Semester 1\MTRX2700\MTRX2700-2024\STMF3disco-BSP\Debug" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -u _scanf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
